# sf_aisql_innovation_challenge

./: .gitignore  ANALYZER_README.md  Challenge.md  README.md  analysis_results.json  analyze_tables.py  database_config.yaml  view_results.py  方案.md
core/: PERSISTENCE_STRATEGY.md  SNOWFLAKE_INTEGRATION.md  pyproject.toml
core/docs/: AI_ARCHITECTURE.md
core/src/: .env.example
core/src/app/: __init__.py  main.py
core/src/app/api/: dependencies.py  endpoints.py
core/src/app/api/v1/: __init__.py  agent.py  ai_sql.py  column_metadata.py  column_workflows.py  eda.py  health.py  table_assets.py  tables.py  usage.py
core/src/app/config/: README.md  __init__.py  prompts.py
core/src/app/core/: config.py  health.py  security.py
core/src/app/core/db/: database.py
core/src/app/crud/: __init__.py  crud_rate_limit.py  crud_tier.py  crud_users.py
core/src/app/middleware/: client_cache_middleware.py
core/src/app/models/: __init__.py  agent_prompt.py  column_metadata.py  eda_workflow.py  post.py  rate_limit.py  report_layout_event.py  table_asset.py  table_asset_metadata.py  tier.py  user.py
core/src/app/orchestration/: __init__.py  agent.py  column_workflow_context.py  column_workflow_logging.py  column_workflow_orchestrator.py  column_workflows.py  eda_agents.py  eda_hooks.py  eda_workflows.py  strands_aisql_agent.py  strands_integration.py  tools.py
core/src/app/orchestration/column_workflow_tools/: __init__.py  agents.py  analysis.py  base.py  insights.py  quality.py  stats.py  text_image.py  visuals.py
core/src/app/prompts/: __init__.py  agent_prompt_templates.py
core/src/app/schemas/: ai_sql.py  column_metadata.py  rate_limit.py  table_asset.py  tier.py
core/src/app/scripts/: seed_agent_prompts.py
core/src/app/services/: __init__.py  ai_helpers.py  ai_sql_builders.py  ai_sql_service.py  chart_service.py  column_metadata_service.py  data_type_detector.py  eda_service.py  eda_workflow_persistence.py  modular_ai_sql_service.py  snowflake_service.py
core/src/migrations/versions/: 1f2c3d4e5a6b_add_agent_prompts_table.py  4c9b8d2e8f4a_add_column_metadata_tables.py  75334592c859_add_table_assets_table.py  9ba36d2688cf_add_eda_workflow_execution_tables.py  c2f8d7a5e9b1_drop_post_tier_tables.py  e5b6c7d8a9f0_add_report_layout_events.py
core/tests/: test_ai_sql.py  test_eda_workflow.py  test_implementation.py  test_live_aisql.py  test_workflow_only.py
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: ai.ts  artifacts.ts  client.ts  columnMetadata.ts  columnWorkflows.ts  eda.ts  index.ts  tables.ts  types.ts  usage.ts  workflows.ts
frontend/src/components/: ColumnNotesEditor.tsx  NewTableDrawer.tsx  PreviewTable.tsx  SnowflakeConfigDialog.tsx  StatusBar.tsx  TopNav.tsx
frontend/src/hooks/: index.ts  (+5 more)
frontend/supabase/: config.toml
output/: ai_complete_test_20251217_181411.json  ai_sql_comp_tables_20251217_181351.json  database_metadata_20251217_181413.json  sample_stylesourcebook_product_images_20251217_181401.json  sample_test_products_20251217_181405.json
(+61 files in other folders)
